--- a/render.yaml
+++ b/render.yaml
@@ -2,17 +2,26 @@ databases:
   - name: app_render
     databaseName: app_render
     user: app_render
+    ipAllowList: []
+    plan: free
 
 services:
   - type: web
     name: app_render
     env: ruby
+    plan: free
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
+      - key: RAILS_MASTER_KEY
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: app_render
           property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
+
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
